compiler/tests-spec/testData/diagnostics/linked/when-expression/p-7/neg/3.1.kt
// !WITH_BASIC_TYPES

/*
 KOTLIN DIAGNOSTICS SPEC TEST (NEGATIVE)

 SECTION: when-expression
 PARAGRAPH: 7
 SENTENCE: [3] Contains test condition: containment operator followed by an expression.
 NUMBER: 1
 DESCRIPTION: 'When' with bound value and 'when condition' with range expression, but without containment checking operator.
 */

fun case_1(value: Int, value1: _BasicTypesProvider): String {
    when (value) {
        <!INCOMPATIBLE_TYPES!>-1000L..100<!> -> return ""
        <!INCOMPATIBLE_TYPES!>value1.getInt()..getLong()<!> -> return ""
    }

    return ""
}
